# Eclipse-Engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  worklog.md
CMake/: BuildOptions.cmake  (+4 more)
Editor/: CMakeLists.txt
Editor/Include/Editor/Camera/: EditorCamera.h
Editor/Include/Editor/Commands/: EditorCommandSystem.h  ShortcutManager.h
Editor/Include/Editor/Core/: Dockspace.h  DragDrop.h  EditorApplication.h  EditorContext.h  EditorIcons.h  EntityFactory.h  MenuBar.h  PlayModeController.h  Toolbar.h
Editor/Include/Editor/Framework/: LayoutManager.h  PanelManager.h
Editor/Include/Editor/Gizmos/: GizmoManager.h
Editor/Include/Editor/History/: CommandHistory.h
Editor/Include/Editor/Panels/: ConsolePanel.h  ContentBrowserPanel.h  GamePanel.h  HierarchyPanel.h  InspectorPanel.h  ProfilerPanel.h  ProjectBrowserPanel.h  ScenePanel.h  StatisticsPanel.h
Editor/Include/Editor/Picking/: EntityPicking.h
Editor/Include/Editor/Prefs/: EditorPreferences.h  ProjectSettings.h
Editor/Include/Editor/Project/: Project.h  ProjectManager.h  SceneManager.h
Editor/Include/Editor/Rendering/: DebugRenderer.h  SceneRenderer.h
Editor/Include/Editor/Selection/: EditorSelection.h
Editor/Include/Editor/Theme/: ThemeManager.h
Editor/Include/Editor/Viewport/: FramebufferManager.h  ViewportFramebuffer.h
Editor/Source/: EditorMain.cpp
Editor/Source/Camera/: EditorCamera.cpp
Editor/Source/Commands/: EditorCommandSystem.cpp  ShortcutManager.cpp
Editor/Source/Core/: Dockspace.cpp  DragDrop.cpp  EditorApplication.cpp  EditorContext.cpp  EditorIcons.cpp  EntityFactory.cpp  MenuBar.cpp  PlayModeController.cpp  Toolbar.cpp
Editor/Source/Framework/: LayoutManager.cpp  PanelManager.cpp
Editor/Source/Gizmos/: GizmoManager.cpp
Editor/Source/History/: CommandHistory.cpp
Editor/Source/Panels/: ConsolePanel.cpp  ContentBrowserPanel.cpp  GamePanel.cpp  HierarchyPanel.cpp  InspectorPanel.cpp  ProfilerPanel.cpp  ProjectBrowserPanel.cpp  ScenePanel.cpp  StatisticsPanel.cpp
Editor/Source/Picking/: EntityPicking.cpp
Editor/Source/Prefs/: EditorPreferences.cpp  ProjectSettings.cpp
Editor/Source/Project/: Project.cpp  ProjectManager.cpp  SceneManager.cpp
Editor/Source/Rendering/: DebugRenderer.cpp  SceneRenderer.cpp
Editor/Source/Selection/: EditorSelection.cpp
Editor/Source/Theme/: ThemeManager.cpp
Editor/Source/Viewport/: FramebufferManager.cpp  ViewportFramebuffer.cpp
Engine/: CMakeLists.txt
Engine/Include/Engine/: Engine.h
Engine/Include/Engine/Application/: Application.h  ApplicationConfig.h  ApplicationSpec.h
Engine/Include/Engine/Components/: AudioSource.h  CameraComponent.h  Collider.h  EnabledComponent.h  HierarchyComponent.h  IDComponent.h  LightComponent.h  MeshComponent.h  NameComponent.h  RelationshipComponent.h  RigidBody.h  ScriptComponent.h  StaticComponent.h  TagComponent.h  TransformComponent.h  VisibilityComponent.h
Engine/Include/Engine/Configuration/: Config.h
Engine/Include/Engine/Core/: Assert.h  Base.h  BuildConfig.h  Compiler.h  Log.h  ModuleRegistry.h  Platform.h  Singleton.h  Timing.h  Types.h  UUID.h  Version.h
Engine/Include/Engine/Diagnostics/: BuildInfo.h  CrashHandler.h  Instrumentation.h  MemoryStats.h  PerformanceCounters.h  StackTrace.h  SystemInfo.h
Engine/Include/Engine/ECS/: ComponentRegistry.h  Entity.h  IComponentReflection.h  Registry.h
Engine/Include/Engine/Entities/: EntityHandle.h  EntityManager.h
Engine/Include/Engine/Events/: Event.h  EventBus.h
Engine/Include/Engine/Filesystem/: Directory.h  File.h  Path.h
Engine/Include/Engine/Hierarchy/: HierarchyManager.h  HierarchyUtils.h
Engine/Include/Engine/Math/: Math.h
Engine/Include/Engine/Memory/: Allocator.h  Memory.h
Engine/Include/Engine/Platform/: Clipboard.h  Cursor.h  DynamicLibrary.h  FileDialog.h  Monitor.h  OS.h  PlatformInfo.h  PlatformManager.h  Timer.h  Window.h
Engine/Include/Engine/Renderer/: WorldRenderer.h
Engine/Source/Application/: Application.cpp  EntryPoint.h
Engine/Source/Configuration/: Config.cpp
Engine/Source/Core/: Assert.cpp  Log.cpp  ModuleRegistry.cpp  Timing.cpp  UUID.cpp
Engine/Source/Diagnostics/: BuildInfo.cpp  CrashHandler.cpp  Instrumentation.cpp  MemoryStats.cpp  PerformanceCounters.cpp  StackTrace.cpp  SystemInfo.cpp
Engine/Source/Entities/: EntityManager.cpp
Engine/Source/Events/: EventBus.cpp
Engine/Source/Filesystem/: Directory.cpp  File.cpp  Path.cpp
Engine/Source/Hierarchy/: HierarchyManager.cpp
Engine/Source/Platform/: FileDialogStub.cpp  FileDialogWin32.cpp  PlatformInfo.cpp  PlatformManager.cpp  Timer.cpp
Engine/Source/Renderer/: WorldRenderer.cpp
Engine/Source/Runtime/: Engine.cpp  FrameStats.cpp  ModuleManager.cpp  SubsystemManager.cpp
Engine/Source/Scene/: Scene.cpp  SceneManager.cpp
Engine/Source/Serialization/: SceneSerializer.cpp
Engine/Source/Systems/: SystemScheduler.cpp  TransformSystem.cpp
Engine/Source/Threading/: CPUInfo.cpp  Thread.cpp
Engine/Source/Utilities/: CommandLine.cpp  Hash.cpp  String.cpp
Engine/Source/World/: World.cpp  WorldManager.cpp
Sandbox/: CMakeLists.txt
Sandbox/Source/: SandboxMain.cpp
Tests/: CMakeLists.txt
Tests/Source/Application/: ApplicationTests.cpp
Tests/Source/Components/: TransformComponentTests.cpp
Tests/Source/Configuration/: ConfigTests.cpp
Tests/Source/Core/: LogTests.cpp  ModuleRegistryTests.cpp  TimingTests.cpp  UUIDTests.cpp
Tests/Source/Diagnostics/: BuildInfoTests.cpp  PerformanceCountersTests.cpp  SystemInfoTests.cpp
Tests/Source/ECS/: RegistryTests.cpp
Tests/Source/Filesystem/: DirectoryTests.cpp  FileTests.cpp  PathTests.cpp
Tests/Source/Platform/: PlatformTests.cpp
Tests/Source/Runtime/: EngineStateTests.cpp  EngineTests.cpp  FrameStatsTests.cpp  ModuleManagerTests.cpp  SubsystemManagerTests.cpp
Tests/Source/Scene/: SceneTests.cpp
Tests/Source/Systems/: TransformSystemTests.cpp
Tests/Source/Threading/: ThreadTests.cpp
Tests/Source/Transforms/: TransformUtilsTests.cpp
Tests/Source/Utilities/: CommandLineTests.cpp  HashTests.cpp  StringTests.cpp
Tests/Source/World/: WorldTests.cpp
(+150 files in other folders)
